# bitwiselearnv3

./: .gitignore  AGENTS.md  Azure_Architecture_Components_Sizing.xlsx  BACKEND_REWRITE_PLAN.md  BitwiseLearn_Pricing_Revenue_Model.xlsx  BitwiseLearn_V2_Architecture_Design.docx  BitwiseLearn_V2_Azure_Architecture.docx  BitwiseLearn_V2_HighLevel_Design.docx  BitwiseLearn_V2_MultiTenant_Design.docx  BitwiseLearn_V2_Pricing_Strategy.docx  README.md  run-student-portal.sh
.github/workflows/: deploy-go-server.yml
apps/auth-service/: requirements.txt
apps/course-service/: main.py
apps/gateway/: main.py  requirements.txt
apps/go-server/: .dockerignore  Dockerfile  go.mod  go.sum
apps/notification-service/: main.py
apps/python-server/: enums.py  requirements.txt
apps/shared/: pyproject.toml
apps/shared/shared/: __init__.py
apps/shared/shared/middleware/: auth.py
apps/shared/shared/models/: __init__.py  assessment.py  assessment_submission.py  batch.py  course.py  course_assignment.py  course_assignment_question.py  course_assignment_submission.py  course_section.py  course_section_problem.py  institution.py  problem.py  problem_solution.py  problem_topic.py  student.py  teacher.py  user.py  vendor.py
apps/shared/shared/schemas/: assessment.py  auth.py  batch.py  course.py  institution.py  problem.py  student.py  teacher.py  user.py  vendor.py
apps/shared/shared/services/: cloudinary_service.py  email.py  piston.py  queue.py  s3.py
apps/shared/shared/utils/: jwt.py  reset_token.py
frontend/: .dockerignore
scripts/: seed_learning_module.py
(+457 files in other folders)
