[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "1.0.0"
description = "Shared library for BitwiseLearn microservices"
requires-python = ">=3.11"
dependencies = [
    "beanie==1.27.0",
    "motor==3.6.0",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "pydantic[email]>=2.10.3",
    "pydantic-settings>=2.7.0",
    "fastapi>=0.115.6",
    "boto3>=1.35.81",
    "cloudinary>=1.41.0",
    "aio-pika>=9.5.3",
    "jinja2>=3.1.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
include = ["shared*"]
